--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +27,7 @@
         .container {
             background: white;
             border-radius: 20px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
             max-width: 800px;
             width: 100%;
             padding: 40px;
@@ -39,6 +40,7 @@
                 opacity: 0;
                 transform: translateY(30px);
             }
+
             to {
                 opacity: 1;
                 transform: translateY(0);
@@ -57,6 +59,7 @@
                 opacity: 0;
                 transform: translateY(-20px);
             }
+
             to {
                 opacity: 1;
                 transform: translateY(0);
@@ -85,7 +88,7 @@
 
         .feature:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
         }
 
         .feature-icon {
@@ -125,9 +128,12 @@
         }
 
         @keyframes pulse {
-            0%, 100% {
+
+            0%,
+            100% {
                 transform: scale(1);
             }
+
             50% {
                 transform: scale(1.05);
             }
@@ -169,7 +175,7 @@
             h1 {
                 font-size: 1.8em;
             }
-            
+
             .container {
                 padding: 25px;
             }
@@ -185,6 +191,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>🎓 小学科学四年级上册</h1>
@@ -228,7 +235,7 @@
             </div>
         </div>
 
-        <a href="小学科学四上：科学大闯关总站.html" class="btn-enter">
+        <a href="main-hub.html" class="btn-enter">
             🚀 开始学习
         </a>
 
@@ -242,4 +249,5 @@
         </footer>
     </div>
 </body>
+
 </html>
